# fence/resources/google/validity.py
@@ -6,16 +6,20 @@ from collections import Mapping
 from fence.resources.google.utils import (
     get_registered_service_accounts,
     get_project_access_from_service_accounts,
-    get_user_ids_from_google_members,
-    get_service_account_ids_from_google_project
+    get_users_from_google_members,
+    get_service_account_ids_from_google_members,
+    get_user_emails_on_google_project,
 )
 from fence.resources.google.access_utils import (
     is_valid_service_account_type,
     service_account_has_external_access,
     is_service_account_from_google_project,
     google_project_has_parent_org,
-    google_project_has_valid_membership,
-    do_all_users_have_access_to_project
+    get_google_project_valid_users_and_service_accounts,
+    do_all_users_have_access_to_project,
+    get_project_from_auth_id,
+    can_access_google_project,
+    remove_white_listed_service_account_ids,
 )
 
 
@@ -79,6 +83,9 @@ class ValidityInfo(Mapping):
     def __str__(self):
         return str(self._info)
 
+    def get_info(self):
+        return self._info
+
 
 class GoogleProjectValidity(ValidityInfo):
     """
@@ -104,6 +111,7 @@ class GoogleProjectValidity(ValidityInfo):
         An example of the dict-like structure with validity info is:
 
         {
+            'monitor_has_access': True,
             'valid_parent_org': True,
             'valid_membership': True,
             'service_accounts': {
@@ -119,8 +127,14 @@ class GoogleProjectValidity(ValidityInfo):
                 }
             },
             'access': {
-                'ProjectA': True,
-                'ProjectB': False
+                'ProjectA': {
+                    'exists': True,
+                    'all_users_have_access': True
+                },
+                'ProjectB': {
+                    'exists': True,
+                    'all_users_have_access': True
+                },
             }
         }
     """
@@ -149,8 +163,10 @@ class GoogleProjectValidity(ValidityInfo):
 
         # setup default values for error information, will get updated in
         # check_validity
+        self._info['monitor_has_access'] = None
         self._info['valid_parent_org'] = None
-        self._info['valid_membership'] = None
+        self._info['valid_member_types'] = None
+        self._info['members_exist_in_fence'] = None
         self._info['service_accounts'] = {}
         self._info['access'] = {}
 
@@ -163,6 +179,13 @@ class GoogleProjectValidity(ValidityInfo):
         Args:
             early_return (bool, optional): Description
         """
+        has_access = can_access_google_project(self.google_project_id)
+        self.set('monitor_has_access', has_access)
+
+        # always early return if we can't access the project
+        if not has_access:
+            return
+
         valid_parent_org = (
             not google_project_has_parent_org(self.google_project_id)
         )
@@ -170,16 +193,37 @@ class GoogleProjectValidity(ValidityInfo):
         if not valid_parent_org and early_return:
             return
 
-        valid_membership = (
-            google_project_has_valid_membership(self.google_project_id)
-        )
-        self.set('valid_membership', valid_membership)
-        if not valid_membership and early_return:
-            return
+        user_members = None
+        service_account_members = []
+        try:
+            user_members, service_account_members = (
+                get_google_project_valid_users_and_service_accounts(
+                    self.google_project_id)
+            )
+            self.set('valid_member_types', True)
+        except Exception:
+            self.set('valid_member_types', False)
+            if early_return:
+                return
+
+        # if we have valid members, we can check if they exist in fence
+        users_in_project = None
+        if user_members is not None:
+            try:
+                users_in_project = get_users_from_google_members(user_members)
+                self.set('members_exist_in_fence', True)
+            except Exception:
+                self.set('members_exist_in_fence', False)
+                if early_return:
+                    return
 
         service_accounts = (
-            get_service_account_ids_from_google_project(self.google_project_id)
+            get_service_account_ids_from_google_members(
+                service_account_members)
         )
+
+        remove_white_listed_service_account_ids(
+            service_accounts)
 
         if self.new_service_account:
             service_accounts.append(self.new_service_account)
@@ -199,7 +243,7 @@ class GoogleProjectValidity(ValidityInfo):
                 return
 
             # update project with error info from the service accounts
-            service_account_id = str(service_account)  # TODO should be email
+            service_account_id = str(service_account)
             service_accounts_validity.set(
                 service_account_id, service_account_validity_info)
 
@@ -210,27 +254,46 @@ class GoogleProjectValidity(ValidityInfo):
         service_accounts = (
             get_registered_service_accounts(self.google_project_id)
         )
-        service_account_access = (
+        service_account_project_access = (
             get_project_access_from_service_accounts(service_accounts)
         )
 
+        # use a generic validityinfo object to hold all the projects validity
+        project_access_validities = ValidityInfo()
+
         # extend list with any provided access to test
-        service_account_access.extend(self.new_service_account_access)
+        for provided_access in self.new_service_account_access:
+            project = get_project_from_auth_id(provided_access)
+
+            # if provided access doesn't exist, set error in project_validity
+            if not project:
+                project_validity = ValidityInfo()
+                project_validity.set('exists', False)
+                project_validity.set('all_users_have_access', None)
+                project_access_validities.set(
+                    str(provided_access), project_validity)
+            else:
+                service_account_project_access.append(project)
 
         # make sure all the users of the project actually have access to all
         # the data the service accounts have access to
-        project_members = []  # TODO get all members on google project
+        for project in service_account_project_access:
+            project_validity = ValidityInfo()
+            project_validity.set('exists', True)
 
-        all_user_ids = get_user_ids_from_google_members(project_members)
+            # if all the users exist in our db, we can check if they have valid
+            # access
+            valid_access = None
+            if users_in_project:
+                valid_access = do_all_users_have_access_to_project(
+                    users_in_project, project.id)
+            project_validity.set('all_users_have_access', valid_access)
 
-        # use a generic validityinfo object to hold all the projects validity
-        project_access_validity = ValidityInfo()
-        for project in service_account_access:
-            valid_access = do_all_users_have_access_to_project(
-                all_user_ids, project)
-            project_access_validity.set(str(project), valid_access)
+            project_access_validities.set(
+                str(project.auth_id), project_validity)
 
-        self.set('access', project_access_validity)
+        self.set('access', project_access_validities)
+        return
 
 
 class GoogleServiceAccountValidity(ValidityInfo):
@@ -274,13 +337,13 @@ class GoogleServiceAccountValidity(ValidityInfo):
         self._info['owned_by_project'] = None
 
     def check_validity(self, early_return=True):
-        valid_type = is_valid_service_account_type(self.account_id)
+        valid_type = is_valid_service_account_type(self.google_project_id, self.account_id)
         self.set('valid_type', valid_type)
         if not valid_type and early_return:
             return
 
         no_external_access = not (
-            service_account_has_external_access(self.account_id)
+            service_account_has_external_access(self.account_id, self.google_project_id)
         )
         self.set('no_external_access', no_external_access)
         if not no_external_access and early_return:
