# openapis/swagger.yaml
@@ -1087,6 +1087,18 @@ components:
                 'error_description':
                   type: string
                   description: More details about the error
+                'service_account_validity':
+                  type: object
+                  properties:
+                    service_account_id:
+                      type: object
+                      properties:
+                        no_external_access:
+                          type: boolean
+                        owned_by_project:
+                          type: boolean
+                        valid_type:
+                          type: boolean
             google_project_id:
               type: object
               properties:
@@ -1099,21 +1111,35 @@ components:
                 'error_description':
                   type: string
                   description: More details about the error
+                'membership_validity':
+                  type: object
+                  properties:
+                    'valid_member_types':
+                      type: boolean
+                    'members_exist_in_fence':
+                      type: boolean
             project_access:
               type: object
               properties:
-                project_name:
+                'status':
+                  type: integer
+                  description: HTTP Status code representing the validity/success for this field
+                'error':
+                  type: string
+                  description: Specific error name
+                'error_description':
+                  type: string
+                  description: More details about the error
+                'project_validity':
                   type: object
                   properties:
-                    'status':
-                      type: integer
-                      description: HTTP Status code representing the validity/success for this field
-                    'error':
-                      type: string
-                      description: Specific error name
-                    'error_description':
-                      type: string
-                      description: More details about the error
+                    project_id:
+                      type: object
+                      properties:
+                        all_users_have_access:
+                          type: boolean
+                        exists:
+                          type: boolean
       example:
         success: false
         errors:
@@ -1121,19 +1147,29 @@ components:
             'status': 200
             'error': null
             'error_description': ''
+            'service_account_validity':
+              'some-service-account@project-id.iam.gserviceaccount.com':
+                'no_external_access': true
+                'owned_by_project': true
+                'valid_type': true
           google_project_id:
             'status': 200
             'error': null
             'error_description': ''
+            'membership_validity':
+              valid_member_types: true
+              members_exist_in_fence: true
           project_access:
-            ProjectA:
-              'status': 200
-              'error': null
-              'error_description': ''
-            ProjectB:
-              'status': 403
-              'error': 'Unauthorized'
-              'error_description': 'Not all users have access requested'
+            'status': 403
+            'error': 'Unauthorized'
+            'error_description': 'Not all users have access requested'
+            'project_validity':
+              'ProjectA':
+                'all_users_have_access': false
+                'exists': true
+              'ProjectB':
+                'all_users_have_access': true
+                'exists': true
     GoogleServiceAccountProjectAccess:
       type: object
       required:
